<resources>
    <string name="app_name">ClimbyApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="title_climbs">Climbs</string>
    <string name="title_routes">Routes</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="login">Log in</string>
    <string name="SignUp">Sign up</string>
    <string name="email">Email</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="back">Go back</string>
    <string name="my_profile">My profile</string>
    <string name="bio">Bio</string>
    <string name="edit_profile">Edit profile</string>
</resources>